syntax = "proto3";
import "TokenStatusInfo.proto";

option java_multiple_files = true;
option java_package = "org.niis.xroad.signer.protocol.dto";

/* Generic empty request/response. */
message Empty {
}

message ClientIdProto {
  string memberClass = 1;
  string memberCode = 2;
  string subsystemCode = 3;

  string xroadInstance = 4;
  XRoadObjectType objectType = 5;
}

message SecurityServerIdProto {
  string memberClass = 1;
  string memberCode = 2;
  string serverCode = 3;

  string xroadInstance = 4;
  XRoadObjectType objectType = 5;
}

enum XRoadObjectType {
  XROAD_OBJECT_TYPE_UNKNOWN = 0;
  SERVER = 1;
  SERVICE = 2;
  MEMBER = 3;
  SUBSYSTEM = 4;
  GLOBALGROUP = 5;
  LOCALGROUP = 6 [deprecated = true]; // Deprecated
}
